--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.65.1"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
